--- a/FCF-Frame.html
+++ b/FCF-Frame.html
@@ -22,7 +22,7 @@
     outputs: 1,
     paletteLabel: 'Frame',
     icon: 'debug.png',
-    label: function () {
+    label: function () {//根據條件來定義面板上要呈現的名稱
       if (this.name)
         return 'Frame: ' + this.name;
       else
@@ -38,6 +38,7 @@
     <input type="text" id="node-input-name" placeholder="Name">
   </div>
 </script>
+
 <script type="text/x-red" data-help-name="FCF-Frame">
   <p>
     用來紀錄 Data Collection 以及 Pull Service 所取得的資料
