--- a/FCF-Dispatcher.html
+++ b/FCF-Dispatcher.html
@@ -46,7 +46,7 @@
           var selectField = $('<input/>', {
               style: "width:80%; margin-left: 5px; text-align: left;"
             })
-            .attr('placeholder', 'Action 值')
+            .attr('placeholder', 'Action Value')
             .attr('type', 'text')
             .appendTo(row);
           if (rule.topic != null) {
@@ -86,7 +86,7 @@
      <input type="text" id="node-input-token">
  </div>
  <div class="form-row">
-    <label for="node-input-name" style="width:100%;"><i class="fa fa-tag"></i> 根據 Api.ai 回傳 Action 值做判定：</label>
+    <label for="node-input-name" style="width:100%;"><i class="fa fa-tag"></i> Action Value：</label>
   </div>
   <div class="form-row node-input-rule-container-row">
     <ol id="node-input-rule-container"></ol>
