--- a/FCF-Facebook.html
+++ b/FCF-Facebook.html
@@ -40,21 +40,21 @@
   </div>
   <div class="form-row">
     <label for="node-config-input-token"><i class="icon-cog"></i> Token</label>
-    <input type="text" id="node-config-input-token" placeholder="粉絲專頁存取權杖">
+    <input type="text" id="node-config-input-token" placeholder="Page Token">
     <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;margin-top:5px;">
 
     </div>
   </div>
   <div class="form-row">
     <label for="node-config-input-app_secret"><i class="icon-cog"></i> App Secret</label>
-    <input type="text" id="node-config-input-app_secret" placeholder="應用程式密鑰">
+    <input type="text" id="node-config-input-app_secret" placeholder="App Secret">
     <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;margin-top:5px;">
 
     </div>
   </div>
   <div class="form-row">
     <label for="node-config-input-verify_token"><i class="icon-random"></i> Verify</label>
-    <input type="text" id="node-config-input-verify_token" placeholder="驗證權杖">
+    <input type="text" id="node-config-input-verify_token" placeholder="Webhook Token">
     <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;margin-top:5px;">
 
     </div>
@@ -147,7 +147,7 @@
     <input type="text" id="node-input-bot" placeholder="Bot">
   </div>
   <div class="form-row">
-    <label for="node-input-track"><i class="icon-envelope"></i> 接續話題</label>
+    <label for="node-input-track"><i class="icon-envelope"></i> Track Conversation</label>
     <input type="checkbox" value="true" id="node-input-track">
     <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;margin-top:5px;">
     </div>
