--- a/FCF-Message.html
+++ b/FCF-Message.html
@@ -53,7 +53,7 @@
             } else if (item.message != null) {
               content = item.message;
             }
-            $('<textarea placeholder="訊息內容">' + content + '</textarea>')
+            $('<textarea placeholder="Message Content">' + content + '</textarea>')
               .css({
                 width: '93%',
                 height: '100px'
