--- a/FCF-Frame.html
+++ b/FCF-Frame.html
@@ -34,7 +34,7 @@
 
 <script type="text/x-red" data-template-name="FCF-Frame">
   <div class="form-row">
-    <label for="node-input-name"><i class="icon-tag"></i> Frame 類別</label>
+    <label for="node-input-name"><i class="icon-tag"></i> Frame Class</label>
     <input type="text" id="node-input-name" placeholder="Name">
   </div>
 </script>
