--- a/FCF-Dispatcher.html
+++ b/FCF-Dispatcher.html
@@ -85,11 +85,11 @@
 
 <script type="text/x-red" data-template-name="FCF-Dispatcher">
     <div class="form-row">
-        <label for="node-input-email"><i class="icon-tag"></i> Dialogflow Service Account E-mail：</label>
+        <label for="node-input-email" style="width:100%;"><i class="icon-tag"></i> Dialogflow Service Account E-mail：</label>
         <input type="text" id="node-input-email">
     </div>
     <div class="form-row">
-        <label for="node-input-privateKey"><i class="icon-tag"></i> Dialogflow Service Account Private Key：</label>
+        <label for="node-input-privateKey" style="width:100%;"><i class="icon-tag"></i> Dialogflow Service Account Private Key：</label>
         <input type="text" id="node-input-privateKey">
     </div>
     <div class="form-row">
