與Dialogflow config node結合

--- a/FCF-DialogflowConfig.html
+++ b/FCF-DialogflowConfig.html
@@ -27,7 +27,7 @@
 </script>
 <script type="text/x-red" data-template-name="FCF-DialogflowConfig">
     <div class="form-row">
-        <label for="node-config-input-agentName"><i class="icon-bookmark"></i> Agent Name：</label>
+        <label for="node-config-input-agentName" style="width:100%;"><i class="icon-bookmark"></i> Agent Name：</label>
         <input type="text" id="node-config-input-agentName">
     </div>
     <div class="form-row">
