--- a/FCF-Dispatcher.html
+++ b/FCF-Dispatcher.html
@@ -84,11 +84,11 @@
 
 <script type="text/x-red" data-template-name="FCF-Dispatcher">
     <div class="form-row">
-        <label for="node-input-agentCredentials"><i class="icon-bookmark"></i>Dialogflow Agent Credentials：</label>
+        <label for="node-input-agentCredentials" style="width:100%;"><i class="icon-bookmark"></i>Dialogflow Agent Credentials：</label>
         <input type="text" id="node-input-agentCredentials" placeholder="Agent">
     </div>
     <div class="form-row">
-        <label for="node-input-name" style="width:100%;"><i class="fa fa-tag"></i> Action Value：</label>
+        <label for="node-input-action" style="width:100%;"><i class="fa fa-tag"></i> Action Value：</label>
     </div>
     <div class="form-row node-input-rule-container-row">
         <ol id="node-input-rule-container"></ol>
