--- a/FCF-PushService.html
+++ b/FCF-PushService.html
@@ -1,39 +1,34 @@
 <script type="text/javascript">
-  RED.nodes.registerType('FCF-PushService', {
-    category: 'FCF',
-    color: '#E7E7AE',
-    defaults: {
-      rules: {
-        value: [{
-          topic: ''
-        }]
-      },
-      URL: {
-        value: ""
-      },
-      outputs: {
-        value: 1
-      }
-    },
-    inputs: 0,
-    outputs: 1,
-    paletteLabel: 'Push Service',
-    icon: 'bridge.png',
-    label: function () {
-      return 'Push Service';
-    }
-  });
+    RED.nodes.registerType("FCF-PushService", {
+        category: "FCF",
+        color: "#E7E7AE",
+        defaults: {
+            url: {
+                value: ""
+            },
+            outputs: {
+                value: 1
+            }
+        },
+        inputs: 0,
+        outputs: 1,
+        paletteLabel: "Push Service",
+        icon: "bridge.png",
+        label: function () {
+            return "Push Service";
+        }
+    });
 </script>
 
 <script type="text/x-red" data-template-name="FCF-PushService">
-  <div class="form-row">
-     <label for="node-input-URL"><i class="icon-tag"></i>Service URL</label>
-     <input type="text" id="node-input-URL" placeholder="/url">
- </div>
+    <div class="form-row">
+        <label for="node-input-url"><i class="icon-tag"></i>Service URL</label>
+        <input type="text" id="node-input-url" placeholder="/url">
+    </div>
 </script>
 
 <script type="text/x-red" data-help-name="FCF-PushService">
-  <p>
-    用來連接外部服務 (供外部服務主動推送通知)
-  </p>
+    <p>
+        供外部服務主動推送通知
+    </p>
 </script>
