--- a/FCF-Facebook.html
+++ b/FCF-Facebook.html
@@ -1,35 +1,35 @@
 <script type="text/javascript">//FCF-facebook-node開始
-  RED.nodes.registerType('FCF-facebook-node', {//FCF-facebook-node表示整個Facebook Node，包含Facebook In Facebook Out
-    category: 'config',//定義成config不會出現在面板左邊
-    defaults: {
-      botname: {
-        value: '',
-        required: true//表示一定要談填的資料
-      },
-      usernames: {
-        value: '',
-        required: false
-      },
-      log: {
-        value: null
-      }
-    },
-    paletteName: 'Facebook Bot',
-    credentials: {//定義在這個表私密的資料，不會被匯出
-      token: {//粉絲專頁存取權杖（很長的那個）
-        type: 'text'
-      },
-      verify_token: {//自己定義的token，要放在Facebook Messenger
-        type: 'text'
-      },
-      app_secret: {//Facebook那邊的應用程式密鑰（要打密碼才會顯示）
-        type: 'text'
-      }
-    },
-    label: function () {//回傳這裡的botname變數
-      return this.botname;
-    }
-  });
+    RED.nodes.registerType("FCF-facebook-node", {//FCF-facebook-node表示整個Facebook Node，包含Facebook In Facebook Out
+        category: "config",//定義成config不會出現在面板左邊
+        defaults: {
+            botname: {
+                value: "",
+                required: true//表示一定要談填的資料
+            },
+            usernames: {
+                value: "",
+                required: false
+            },
+            log: {
+                value: null
+            }
+        },
+        paletteName: "Facebook Bot",
+        credentials: {//定義在這個表私密的資料，不會被匯出
+            token: {//粉絲專頁存取權杖（很長的那個）
+                type: "text"
+            },
+            verify_token: {//自己定義的token，要放在Facebook Messenger
+                type: "text"
+            },
+            app_secret: {//Facebook那邊的應用程式密鑰（要打密碼才會顯示）
+                type: "text"
+            }
+        },
+        label: function () {//回傳這裡的botname變數
+            return this.botname;
+        }
+    });
 
 </script>
 
@@ -71,28 +71,29 @@
   <p>
     Facebook 機器人設定
   </p>
-</script><!--FCF-facebook-node結束-->
+</script>
+<!--FCF-facebook-node結束-->
 
 
 <script type="text/javascript">//Facebook In開始
-  RED.nodes.registerType('FCF-facebook-receive', {
-    category: 'FCF',
-    color: '#FFCC66',
-    defaults: {
-      bot: {
-        value: '',
-        type: 'FCF-facebook-node',
-        required: true
-      }
-    },
-    inputs: 0,
-    outputs: 1,
-    icon: 'chatbot-receiver.png',
-    paletteLabel: 'Facebook In',
-    label: function () {
-      return "Facebook In";
-    }
-  });
+    RED.nodes.registerType("FCF-facebook-receive", {
+        category: "FCF",
+        color: "#FFCC66",
+        defaults: {
+            bot: {
+                value: "",
+                type: "FCF-facebook-node",
+                required: true
+            }
+        },
+        inputs: 0,
+        outputs: 1,
+        icon: "chatbot-receiver.png",
+        paletteLabel: "Facebook In",
+        label: function () {
+            return "Facebook In";
+        }
+    });
 
 </script>
 
@@ -107,55 +108,57 @@
   <p>
     用來接收從 Facebook 通訊平台送來的訊息
   </p>
-</script><!-- Facebook Out結束 -->
+</script>
+<!-- Facebook Out結束 -->
 
 <script type="text/javascript">//Facebook Out開始
-  RED.nodes.registerType('FCF-facebook-send', {
-    category: 'FCF',
-    color: '#FFCC66',
-    defaults: {
-      bot: {
-        value: "",
-        type: 'FCF-facebook-node',
-        required: true
-      },
-      track: {
-        value: false
-      },
-      outputs: {
-        value: 0
-      }
-    },
-    inputs: 1,
-    outputs: 0,
-    icon: 'chatbot-sender.png',
-    paletteLabel: 'Facebook Out',
-    label: function () {
-      return "Facebook Out";
-    },
-    oneditsave: function () {
-      var track = $('#node-input-track').is(':checked');
-      this.outputs = track ? 1 : 0;
-    }
-  });
+    RED.nodes.registerType("FCF-facebook-send", {
+        category: "FCF",
+        color: "#FFCC66",
+        defaults: {
+            bot: {
+                value: "",
+                type: "FCF-facebook-node",
+                required: true
+            },
+            track: {
+                value: false
+            },
+            outputs: {
+                value: 0
+            }
+        },
+        inputs: 1,
+        outputs: 0,
+        icon: "chatbot-sender.png",
+        paletteLabel: "Facebook Out",
+        label: function () {
+            return "Facebook Out";
+        },
+        oneditsave: function () {
+            var track = $("#node-input-track").is(":checked");
+            this.outputs = track ? 1 : 0;
+        }
+    });
 
 </script>
 
 <script type="text/x-red" data-template-name="FCF-facebook-send"><!-- Facebook Out第二部分 -->
-  <div class="form-row">
-    <label for="node-input-bot"><i class="icon-bookmark"></i> Bot</label>
-    <input type="text" id="node-input-bot" placeholder="Bot">
-  </div>
-  <div class="form-row">
-    <label for="node-input-track"><i class="icon-envelope"></i> Track Conversation</label>
-    <input type="checkbox" value="true" id="node-input-track">
+    <div class="form-row">
+        <label for="node-input-bot"><i class="icon-bookmark"></i> Bot</label>
+        <input type="text" id="node-input-bot" placeholder="Bot">
+    </div>
+    <div class="form-row">
+        <label for="node-input-track"><i class="icon-envelope"></i> Track Conversation</label>
+        <input type="checkbox" value="true" id="node-input-track">
     <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;margin-top:5px;">
     </div>
-  </div>
+    </div>
 </script>
 
 <script type="text/x-red" data-help-name="FCF-facebook-send">
-  <p>
-    用來將訊息傳送至 Facebook 通訊平台
-  </p>
-</script><!-- Facebook Out結束 -->
+    <p>
+        用來將訊息傳送至 Facebook 通訊平台
+    </p>
+</script>
+<!-- Facebook Out結束 -->
