--- a/FCF-Frame.html
+++ b/FCF-Frame.html
@@ -1,46 +1,45 @@
 <script type="text/javascript">
-  RED.nodes.registerType('FCF-Frame', {
-    category: 'FCF',
-    color: '#DAC4B4',
-    defaults: {
-      rules: {
-        value: [{
-          topic: ''
-        }]
-      },
-      name: {
-        value: ''
-      },
-      token: {
-        value: ""
-      },
-      outputs: {
-        value: 1
-      }
-    },
-    inputs: 1,
-    outputs: 1,
-    paletteLabel: 'Frame',
-    icon: 'debug.png',
-    label: function () {//根據條件來定義面板上要呈現的名稱
-      if (this.name)
-        return 'Frame: ' + this.name;
-      else
-        return 'Frame';
-    }
-  });
+    RED.nodes.registerType("FCF-Frame", {
+        category: "FCF",
+        color: "#DAC4B4",
+        defaults: {
+            rules: {
+                value: [{
+                    topic: ""
+                }]
+            },
+            name: {
+                value: ""
+            },
+            token: {
+                value: ""
+            },
+            outputs: {
+                value: 1
+            }
+        },
+        inputs: 1,
+        outputs: 1,
+        paletteLabel: "Frame",
+        icon: "debug.png",
+        label: function () {
+            if (this.name)
+                return "Frame: " + this.name;
+            else
+                return "Frame";
+        }
+    });
 </script>
 
-
 <script type="text/x-red" data-template-name="FCF-Frame">
-  <div class="form-row">
-    <label for="node-input-name"><i class="icon-tag"></i> Frame Class</label>
-    <input type="text" id="node-input-name" placeholder="Name">
-  </div>
+    <div class="form-row">
+        <label for="node-input-name"><i class="icon-tag"></i> Frame Class</label>
+        <input type="text" id="node-input-name" placeholder="Name">
+    </div>
 </script>
 
 <script type="text/x-red" data-help-name="FCF-Frame">
-  <p>
-    用來紀錄 Data Collection 以及 Pull Service 所取得的資料
-  </p>
+    <p>
+        用來紀錄 Data Collection 以及 Pull Service 所取得的資料
+    </p>
 </script>
