--- a/FCF-DataCollection.html
+++ b/FCF-DataCollection.html
@@ -5,12 +5,15 @@
         defaults: {
             rules: {
                 value: [{
-                    topic: "",
-                    topic2: ""
+                    messageContent: "",
+                    variableName: ""
                 }]
             },
             collect: {
                 value: "query"
+            },
+            whetherToSendLocation: {
+                value: false
             }
         },
         inputs: 1,
@@ -22,20 +25,21 @@
         },
         oneditsave: function () {
             var rules = $("#node-input-rule-container").editableList("items");
+            var whetherToSendLocation = $("#node-input-whetherToSendLocation").is(":checked");
             var node = this;
+            node.whetherToSendLocation = whetherToSendLocation;
             node.rules = [];
             rules.each(function (i) {
                 var rule = $(this);
-                var topic = rule.find("#input1").val();
-                var topic2 = rule.find("#input2").val();
-                if (topic != null && topic != "" && topic2 != null && topic2 != "") {
+                var messageContent = rule.find("#input1").val();
+                var variableName = rule.find("#input2").val();
+                if (messageContent != null && messageContent != "" && variableName != null && variableName != "") {
                     node.rules.push({
-                        topic: topic,
-                        topic2: topic2
+                        messageContent: messageContent,
+                        variableName: variableName
                     });
                 }
             });
-            //this.outputs = node.rules.length;
         },
         oneditprepare: function () {
             var node = this;
@@ -59,11 +63,11 @@
                         .attr("type", "text")
                         .appendTo(row);
 
-                    if (rule.topic != null) {
-                        selectField.val(rule.topic);
+                    if (rule.messageContent != null) {
+                        selectField.val(rule.messageContent);
                     }
-                    if (rule.topic2 != null) {
-                        selectField2.val(rule.topic2);
+                    if (rule.variableName != null) {
+                        selectField2.val(rule.variableName);
                     }
                     var finalspan = $("<span/>", {
                         style: "float: right;margin-top: 6px;"
@@ -93,28 +97,32 @@
 </script>
 
 <script type="text/x-red" data-template-name="FCF-DataCollection">
-
-  <div class="form-row">
-    <label for="node-input-collect"><i class="fa fa-tasks"></i> Data Type</span></label>
-    <select type="text" id="node-input-collect" style="width:70%;">
-        <option value="query">Query</option>
-        <option value="userData">User Data</option>
+    <div class="form-row">
+        <label for="node-input-collect">
+            <i class="fa fa-tasks"></i> Data Type</span>
+        </label>
+        <select type="text" id="node-input-collect" style="width:70%;">
+            <option value="query">Query</option>
+            <option value="userData">User Data</option>
         </select>
-  </div>
-
-  <div class="form-row">
-    <label for="node-input-name" style="width:100%;"><i class="fa fa-tag"></i> Message Content and Variable Name：</label>
-  </div>
-  <div class="form-row node-input-rule-container-row">
-    <ol id="node-input-rule-container"></ol>
-  </div>
-  <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;clear:both;margin-top:5px;">
-
-  </div>
+    </div>
+    <div class="form-row">
+        <label for="node-input-name" style="width:100%;">
+            <i class="fa fa-tag"></i> Message Content and Variable Name：</label>
+    </div>
+    <div class="form-row node-input-rule-container-row">
+        <ol id="node-input-rule-container"></ol>
+    </div>
+    <div style="max-width: 460px;font-size: 12px;color: #999999;line-height: 14px;clear:both;margin-top:5px;">
+    </div>
+    <div class="form-row">
+        <label for="node-input-whetherToSendLocation" style="width:50%;><i class="icon-envelope"></i> 是否收集位置：</label>
+        <input type="checkbox" value="true" id="node-input-whetherToSendLocation">
+    </div>
 </script>
 
 <script type="text/x-red" data-help-name="FCF-DataCollection">
-  <p>
-    用來收集使用者所輸入的資料
-  </p>
+    <p>
+        用來收集使用者所輸入的資料
+    </p>
 </script>
